//------------------------------------------------------------------------------
// {C} Copyright 2020 Pensando Systems Inc. All rights reserved
//
// protobuf specification for PDS agent events
//------------------------------------------------------------------------------

syntax = "proto3";
package pds;

import "meta/meta.proto";
import "types.proto";
import "interface.proto";
import "port.proto";

// Event service definition
service EventSvc {
  rpc EventSubscribe (stream EventRequest) returns (stream EventResponse) {}
}

// Events generated by PDS agent/HAL
enum EventId {
  EVENT_ID_NONE        = 0;
  EVENT_ID_PORT_CREATE = 1;
  EVENT_ID_PORT_UP     = 2;
  EVENT_ID_PORT_DOWN   = 3;
  EVENT_ID_LIF_CREATE  = 4;
  EVENT_ID_LIF_UPDATE  = 5;
  EVENT_ID_LIF_UP      = 6;
  EVENT_ID_LIF_DOWN    = 7;
}

// EventOp indicates whether client is subscribing or unsubscribing
enum EventOp {
  EVENT_OP_NONE        = 0;
  EVENT_OP_SUBSCRIBE   = 1;
  EVENT_OP_UNSUBSCRIBE = 2;
}

// EventRequest captures the event information for subscription/unsubscription
message EventRequest {
  message EventSpec {
    // event of interest
    EventId EventId = 1;
    // action is either subscribe or unsubscribe
    EventOp Action  = 2;
  }
  repeated EventSpec Request = 1;
}

message EventResponse {
  types.ApiStatus Status = 1;
  // event id
  EventId  EventId       = 2;
  // event specific information
  oneof event_info {
      // event specific information for lif events
      Lif  LifEventInfo  = 3;
      // event specific informtion for port events
      Port PortEventInfo = 4;
  }
}
